Finish 3rd API functionally.
